# shell_script

./: .gitignore  README.md  install-all.sh  install_all.sh  path.sh  setup.log.full  test.txt  uninstall_all.sh
new-code-env/for_cmake_c/: CMakeLists.txt  CMakeLists.txt_regular  run
new-code-env/for_cmake_c/src/: main_stdtemplate@cpp  opencv_stdtemplate@cpp  touch_file.py
tmux-manager/work_management/: '  CMakeLists.txt  a.out  alias_command.txt  cmake_test.sh  color.h  command.cpp  command.h  compile_commands.json  copy_from_dear.sh  count.sh  debug.sh  em_python.cpp  hgj_t.cpp  hgj_t.h  main.cpp  main.exe.stackdump  main_Debug.exe.stackdump  main_Release.exe.stackdump  run  run.sh  test  test_readline.cpp  test_regex.cpp  utils.cpp  utils.h
tmux-manager/work_management/.cache/clangd/index/: align.hpp.47ECF0674FE7D32F.idx  array.hpp.003B4940CA8D2E97.idx  array.hpp.37B1AD3C1FB16C2A.idx  array.hpp.63B3D0FF6B34E2D8.idx  array.hpp.EE188B70CEAD8A77.idx  array.ipp.4BD25166ACE1BB37.idx  basic_parser.hpp.3783B6641DA35EB7.idx  basic_parser_impl.hpp.399C663FC3F46CA6.idx  binary.h.AC45E14E9E51A9C7.idx  buffer.hpp.10D23694CA2A4E0F.idx  color.h.50B6CB75A47C907A.idx  command.cpp.9CBC1E38EFB4F3FC.idx  command.h.2A3D2B6F6F771C61.idx  common.hpp.D2936AF386C03A84.idx  config.hpp.CE1157A14E38852E.idx  conversion.hpp.C4DF8AC5CB5ECEE9.idx  conversion.hpp.E8D6C7C57B00BF80.idx  convert.h.49364B11021EB278.idx  d2s.hpp.58002CC6F9D4EE53.idx  d2s.ipp.7434A10F5E7894C1.idx  d2s_full_table.hpp.9B22E6D71340CCBE.idx  d2s_intrinsics.hpp.C2194C9C318E7D4C.idx  default_resource.hpp.69575327F9FA8F22.idx  default_resource.ipp.BA334136A6C630F7.idx  digest.hpp.D9E777F2BF946A98.idx  digit_table.hpp.81006C2A52FF4139.idx  dll.h.4E3BB01B093C3A21.idx  em_python.cpp.963E0FD964514ABF.idx  emit.h.CFEC1A1BFF6245F3.idx  emitter.h.52BEE24703739486.idx  emitterdef.h.2203DD7F39354928.idx  emittermanip.h.52AFF0F5E1FD5EFD.idx  emitterstyle.h.7DDFFA65EC861D61.idx  error.hpp.2930053114A840C7.idx  error.hpp.658A36003943ECBE.idx  error.ipp.C18F88D08A4FC8A9.idx  except.hpp.DCD69D20D12D5615.idx  except.ipp.3AA90CB68DAC6F96.idx  exceptions.h.5EBD83D0FD82EA31.idx  format.hpp.AB777D0B69651152.idx  (+98 more)
tmux-manager/work_management/config/: alias_command.txt  config.yml  gui-help.txt  record-help.txt  study-help.txt
tmux-manager/work_management/cygwin_build/: CMakeCache.txt  Makefile
tmux-manager/work_management/data/2022/03/03-10/: task.txt
tmux-manager/work_management/data/2022/03/03-11/: question.txt  task.txt
tmux-manager/work_management/data/2022/03/03-16/: task.txt
tmux-manager/work_management/data/2022/03/03-18/: learn.txt  record.txt  task.txt
tmux-manager/work_management/data/2022/03/03-19/: record.txt
tmux-manager/work_management/data/2022/11/11-26/: task.txt
tmux-manager/work_management/data/2022/11/11-30/: task.txt
tmux-manager/work_management/data/2022/12/12-01/: task.txt
tmux-manager/work_management/data/2022/12/12-05/: learn.txt  record.txt
tmux-manager/work_management/data/2022/12/12-06/: record.txt  task.txt
tmux-manager/work_management/data/2022/12/12-07/: question.txt  task.txt
tmux-manager/work_management/data/2022/12/12-08/: task.txt
tmux-manager/work_management/data/2022/12/12-14/: question.txt
tmux-manager/work_management/data/2022/12/12-16/: question.txt
tmux-manager/work_management/data/2022/12/12-18/: question.txt
tmux-manager/work_management/data/2022/12/12-19/: question.txt
tmux-manager/work_management/data/2022/12/12-21/: question.txt
tmux-manager/work_management/data/2022/12/12-23/: question.txt
tmux-manager/work_management/data/2022/12/12-24/: question.txt
tmux-manager/work_management/data/2023/01/01-20/: record.txt
tmux-manager/work_management/data/2023/01/01-21/: task.txt
tmux-manager/work_management/data/2023/01/01-28/: question.txt
tmux-manager/work_management/data/2023/01/01-31/: task.txt
tmux-manager/work_management/data/2024/07/07-15/: question.txt
tmux-manager/work_management/data/answers/PLang/c++/: 34.为什么要内存对齐.md  46.区分platform和compiler的宏定义有哪些.md
tmux-manager/work_management/data/answers/PLang/python/: 1.python设置workspace目录的方法.md  10.python的list在前面插入一个list的方法.md  2.python的正则表达式.md  4.python生成随机文件名的方法.md  5.yolo格式标签转化为xml格式标签.md  8.python的natsort模块.md
tmux-manager/work_management/data/answers/PLang/shell/: 1.[$var...]里面加quote的重要性.md  2.shell实现递归遍历文件夹下所有的文件和子文件夹.md
tmux-manager/work_management/data/answers/al&ds/: 29_哈希冲突和解决方法.md
tmux-manager/work_management/data/answers/coding/DL/: 01.实现卷积运算的代码。.md
tmux-manager/work_management/data/answers/coding/LC/: 02.堆排序。.md
tmux-manager/work_management/data/answers/coding/ML/: 01.高斯函数的代码实现。.md  02.关于插值的代码的实现；1）近邻插值；2）线性插值；3）双线性插值；.md  04.实现高斯混合模型的伪代码或者代码。.md
tmux-manager/work_management/data/answers/cv/dl/: 00_维度问题.md  (+20 more)
tmux-manager/work_management/data/answers/hgj/: 自我介绍.md
tmux-manager/work_management/lib/: libyaml-cpp.so.0.7.0
tmux-manager/work_management/my-test/: a  a.out  em_python.cpp  my_input_test.py  test_order.cpp  test_readline.cpp  test_regex.cpp
tmux-manager/work_management/py/: hgj_py.py
tmux-manager/work_management/py-script/: hgj_py.py
tmux-manager/work_management/questions_json/: file_ftp.sh  questions.json  questions.json.bd
tmux-manager/work_management/scripts/: count.sh
tmux-manager/work_management/src/: .swp  color.h  command.cpp  command.h  hgj_t.cpp  hgj_t.h  main.cpp  questions.json  questions.json.bd  scp.sh  test.cpp  test.json  utils.cpp  utils.h
tmux-manager/work_management/tmp/: plan.txt
(+280 files in other folders)
